--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 
   <body>
     <div id="root"></div>
+    <input
+      id="fName"
+      placeholder="Enter your first name"
+      value="JeffreyMartinez"
+    />
     <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
